tryingdevToGit/force-app/main/default/objects/Package__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manali</fullName>
            </value>
            <value>
                <fullName>Shimla</fullName>
            </value>
            <value>
                <fullName>Kufri</fullName>
            </value>
            <value>
                <fullName>Mcleodganj</fullName>
            </value>
            <value>
                <fullName>Dharamshala</fullName>
            </value>
            <value>
                <fullName>Leh</fullName>
            </value>
            <value>
                <fullName>Ladakh</fullName>
            </value>
            <value>
                <fullName>Kedarnath</fullName>
            </value>
            <value>
                <fullName>Badrinath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>