tryingdevToGit/force-app/main/default/objects/Package__c/fields/Discount_Available__c.field-meta.xml
<CustomField>
    <fullName>Discount_Available__c</fullName>
    <label>Discount Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>