tryingdevToGit/force-app/main/default/objects/Package__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Panipat</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Jalandhar</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Kanpur</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>