tryingdevToGit/force-app/main/default/objects/Package__c/fields/Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>Trip_Duration__c</fullName>
    <label>Trip Duration</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>